snapshot/QtOut/20200820_181430/sweet.log
2020-08-20 18:14:30,847 [INFO]: #  From Excel import testsuite success
2020-08-20 18:14:33,580 [INFO]: #  --------------------------------------------------
2020-08-20 18:14:33,581 [INFO]: #  >>> Run the TestCase: HOME_001|打开云塑ERP
2020-08-20 18:14:33,581 [INFO]: #  Run the Step: 1|通用|OPEN|通用-首页链接
2020-08-20 18:14:36,144 [INFO]: #  --- success ---
2020-08-20 18:14:36,344 [INFO]: #  Run the Step: 2|通用|CHECK|通用-页面title
2020-08-20 18:14:36,345 [INFO]: #  DATA:'云塑 企业资源计划管理系统'
2020-08-20 18:14:36,350 [INFO]: #  REAL:'云塑 企业资源计划管理系统'
2020-08-20 18:14:36,360 [INFO]: #  --- success ---
2020-08-20 18:14:36,564 [INFO]: #  --------------------------------------------------
2020-08-20 18:14:36,564 [INFO]: #  >>> Run the TestCase: Login_001|登录
2020-08-20 18:14:36,565 [INFO]: #  Run the Step: 1|登录页面|INPUT|登录页面-账号输入框
2020-08-20 18:14:37,341 [INFO]: #  --- success ---
2020-08-20 18:14:37,541 [INFO]: #  Run the Step: 2|登录页面|INPUT|登录页面-密码输入框
2020-08-20 18:14:38,402 [INFO]: #  --- success ---
2020-08-20 18:14:38,602 [INFO]: #  Run the Step: 3|登录页面|CLICK|登录页面-确定按钮
2020-08-20 18:14:39,245 [INFO]: #  --- success ---
2020-08-20 18:14:39,445 [INFO]: #  Run the Step: 4|登录页面|CHECK|通用-页面加载校验
2020-08-20 18:14:41,040 [INFO]: #  DATA:'欢迎进入 云塑企业资源计划管理系统'
2020-08-20 18:14:41,040 [INFO]: #  REAL:'欢迎进入 云塑企业资源计划管理系统'
2020-08-20 18:14:41,050 [INFO]: #  --- success ---
2020-08-20 18:14:41,250 [INFO]: #  Run the Step: 5|通用|SCRIPT|通用-弹窗#<>
2020-08-20 18:14:41,669 [ERROR]: #  +++ failure +++
Traceback (most recent call last):
  File "D:\daitest\daitest2\daitest\testcase.py", line 110, in run
    step['element'] = replace(step['element'])
  File "D:\daitest\daitest2\daitest\utility.py", line 305, in replace
    value = eval(k, globals(), _vars)
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
2020-08-20 18:14:41,670 [WARNING]: #  Run the testcase: Login_001|登录 Failure, BASE is not success. Break the AutoTest
2020-08-20 18:14:43,988 [INFO]: #  --- Quit th Driver: Chrome
2020-08-20 18:14:44,013 [INFO]: #  From Excel import testsuite success
2020-08-20 18:14:46,607 [INFO]: #  --------------------------------------------------
2020-08-20 18:14:46,607 [INFO]: #  >>> Run the TestCase: HOME_001|打开云塑ERP
2020-08-20 18:14:46,607 [INFO]: #  Run the Step: 1|通用|OPEN|通用-首页链接
2020-08-20 18:14:49,464 [INFO]: #  --- success ---
2020-08-20 18:14:49,671 [INFO]: #  Run the Step: 2|通用|CHECK|通用-页面title
2020-08-20 18:14:49,671 [INFO]: #  DATA:'云塑 企业资源计划管理系统'
2020-08-20 18:14:57,674 [ERROR]: #  *** save the screenshot is failure ***
Traceback (most recent call last):
  File "D:\daitest\daitest2\daitest\testcase.py", line 137, in run
    element = getattr(web, step['keyword'].lower())(step)
  File "D:\daitest\daitest2\daitest\keywords\web.py", line 93, in check
    var[by] = getattr(Common, by)(data, output)
  File "D:\daitest\daitest2\daitest\keywords\web.py", line 18, in title
    logger.info('REAL:%s' % repr(g.driver.title))
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 342, in title
    resp = self.execute(Command.GET_TITLE)
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
    self.error_handler.check_response(response)
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
    raise exception_class(message, screen, stacktrace)
selenium.common.exceptions.WebDriverException: Message: chrome not reachable
  (Session info: chrome=84.0.4147.135)
  (Driver info: chromedriver=2.44.609538 (b655c5a60b0b544917107a59d4153d4bf78e1b90),platform=Windows NT 6.1.7601 SP1 x86_64)


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\daitest\daitest2\daitest\testcase.py", line 227, in run
    g.driver.get_screenshot_as_file(step['snapshot']['Failure'])
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 1032, in get_screenshot_as_file
    png = self.get_screenshot_as_png()
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 1064, in get_screenshot_as_png
    return base64.b64decode(self.get_screenshot_as_base64().encode('ascii'))
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 1074, in get_screenshot_as_base64
    return self.execute(Command.SCREENSHOT)['value']
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
    self.error_handler.check_response(response)
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
    raise exception_class(message, screen, stacktrace)
selenium.common.exceptions.WebDriverException: Message: chrome not reachable
  (Session info: chrome=84.0.4147.135)
  (Driver info: chromedriver=2.44.609538 (b655c5a60b0b544917107a59d4153d4bf78e1b90),platform=Windows NT 6.1.7601 SP1 x86_64)

2020-08-20 18:14:57,678 [ERROR]: #  +++ failure +++
Traceback (most recent call last):
  File "D:\daitest\daitest2\daitest\testcase.py", line 137, in run
    element = getattr(web, step['keyword'].lower())(step)
  File "D:\daitest\daitest2\daitest\keywords\web.py", line 93, in check
    var[by] = getattr(Common, by)(data, output)
  File "D:\daitest\daitest2\daitest\keywords\web.py", line 18, in title
    logger.info('REAL:%s' % repr(g.driver.title))
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 342, in title
    resp = self.execute(Command.GET_TITLE)
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
    self.error_handler.check_response(response)
  File "C:\Users\archmage\AppData\Local\Programs\Python\Python38\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
    raise exception_class(message, screen, stacktrace)
selenium.common.exceptions.WebDriverException: Message: chrome not reachable
  (Session info: chrome=84.0.4147.135)
  (Driver info: chromedriver=2.44.609538 (b655c5a60b0b544917107a59d4153d4bf78e1b90),platform=Windows NT 6.1.7601 SP1 x86_64)

2020-08-20 18:14:57,679 [WARNING]: #  Run the testcase: HOME_001|打开云塑ERP Failure, BASE is not success. Break the AutoTest
2020-08-20 18:14:59,730 [INFO]: #  --- Quit th Driver: Chrome
